--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -141,6 +141,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="TextView"
+            android:textColor="@color/black"
             android:fontFamily="@font/poppins_bold"
             android:textSize="18dp"
             android:paddingLeft="16dp"
