--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -145,6 +145,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="18dp"
         android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,6 +161,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_bold"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -173,6 +175,7 @@
         android:layout_marginTop="32dp"
         android:text="TextView"
         android:textSize="12dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pricetextView" />
@@ -186,6 +189,7 @@
         android:layout_marginEnd="112dp"
         android:text="TextView"
         android:textSize="12dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/oldpricetextView"
